# libwebp

./: CMakeLists.txt
include/webp/: mux.h
lib/: libsharpyuv.lib  libwebp.lib  libwebpdemux.lib  libwebpmux.lib
